Reduced menu items spacing to avoid wrapping.

--- a/p3/static/p4/s/base.css
+++ b/p3/static/p4/s/base.css
@@ -179,7 +179,7 @@ a.tag:hover {
     font: normal 24px/30px "League Gothic", "Arial Narrow", sans-serif;    
 	float: left;
 	
-    margin: 0 30px 0 0;
+    margin: 0 20px 0 0;
 
 }
 
